# jenkinsConcepts

./: manage.py  names.json  pyproject.toml
Jenkins/: JenkinsFileCopy  Jenkinsfile
git-sim_media/3rdWeek/videos/1080p60/partial_movie_files/Log/: partial_movie_file_list.txt
jenkinsApi/: asgi.py  settings.py  urls.py  wsgi.py
jenkinsMain/: apps.py  urls.py  views.py
jenkinsMain/helpers/: name.py  nameReader.py  name_manager.py  numbers.py
